--- a/www/contato.html
+++ b/www/contato.html
@@ -2,15 +2,13 @@
 <html>
 <head>
     <title></title>
-
-
 </head>
 <body>
     <div id="content" class="page-content">
         <div class=" header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
-            <a onclick="Grava();"><i class="fa fa-send"></i></a>
+            <a onclick="EnviaMensagem();"><i class="fa fa-send"></i></a>
         </div>
         <div class="header-clear-small"></div>
         <div class="content">
@@ -23,9 +21,6 @@
                             <input type="email" name="contactNameField" value="" class="contactField  " id="EMAIL" placeholder="E-mail" readonly />
                             <input type="text" name="contactNameField" value="" class="contactField  " id="ASSUNTO" placeholder="Assunto" required />
                             <textarea name="contactNameField" value="" class="contactTextarea" id="MENSAGEM" placeholder="Sua mensagem" rows="10" required />
-                          
-                            <!--<label class="input-label">Moeda base</label>
-                    <select name="" class="contactField" id="SUA_MOEDA"></select>-->
                         </fieldset>
                     </div>
                 </div>
