--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <title></title>
-
 </head>
 <body>
     <div id="content" class="page-content">
@@ -19,7 +18,7 @@
                         <fieldset>
                             <label class="input-label">Busca</label>
                             <!--<label class="input-label">Sua moeda</label>-->
-                            <select name="" class="contactField" id="SUA_MOEDA" onchange="BuscarEstabelecimento(true);"></select>
+                            <select name="" class="contactField" id="SUA_MOEDA" onchange="  BuscarEstabelecimento('DISTANCIA', true);"></select>
                             <!--<label class="input-label">Qual procura?</label>-->
                             <!--<select name="" class="contactField" id="MOEDA_PROCURA"></select>-->
                             <!--<label class="input-label">Qual é a transação?</label>-->
@@ -45,9 +44,7 @@
             <br />
         </div>
     </div>
-    <!--<script src="scripts/jquery-2.1.4.js"></script>
-    <script type="text/javascript" src="scripts/jqueryui.js"></script>-->
-    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
+
     <script type="text/javascript" src="scripts/custom.js"></script>
     <script src="scripts/paginas/estabelecimento.js"></script>
 </body>
