--- a/www/inicio.html
+++ b/www/inicio.html
@@ -57,13 +57,13 @@
                         <i class="fa"></i>
                     </a>
                 </div>-->
-                <div class="navigation-item">
+                <!--<div class="navigation-item">
                     <a onclick="CarregaMenu('mapa.html')" class="nav-item">
                         <i class="fa  fa-map-marker"></i>
                         Mapa
                         <i class="fa"></i>
                     </a>
-                </div>
+                </div>-->
                 <!--<div class="sidebar-decoration"></div>-->
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('estabelecimento.html')" class="nav-item">
@@ -89,16 +89,16 @@
                     </a>
                 </div>-->
                 <!--<div class="sidebar-decoration"></div>-->
-                <!--<div class="navigation-item">
+                <div class="navigation-item">
                     <a onclick="CarregaMenu('historico.html')" class="nav-item">
                         <i class="fa  fa-clock-o"></i>
-                        Histórico
+                        Minhas compras
                         <i class="fa"></i>
                     </a>
-                </div>-->
+                </div>
                 <!--<div class="sidebar-decoration"></div>-->
                 <div class="navigation-item">
-                    <a onclick="CarregaMenu('avaliacao.html')" class="close-nav nav-item">
+                    <a onclick="CarregaMenu('favoritos.html')" class="close-nav nav-item">
                         <i class="fa  fa-area-chart"></i>
                         Favoritos
                         <i class="fa"></i>
@@ -182,6 +182,7 @@
 
     <!--SCRIPTS DE PÁGINAS-->
     <script type="text/javascript" src="scripts/paginas/inicio.js"></script>
+
 
    
 </body>
