--- a/www/historico.html
+++ b/www/historico.html
@@ -10,25 +10,30 @@
 </head>
 <body>
     <div id="content" class="page-content">
-        <div class=" header">
+        <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
-            <a onclick="BuscaValores();"><i class="fa fa-check"></i></a>
+            <a class="open-nav" href="#"><i class="fa fa-arrow-left"></i></a>
         </div>
-        <div class="header-clear"></div>
-        <div class="decoration"></div>
-        <div class="content">
-            <div class="one-half-responsive">
+        <div class="header-clear-small"></div>
+        <fieldset>
+            <div class="content">
                 <div class="container no-bottom">
                     <div class="no-bottom">
-                      
+                        <div>
+                            <fieldset>
+                                <label class="input-label">Minhas compras</label>
+                                <div id="DIVHISTORICO">
+                                </div>
+                            </fieldset>
+                        </div>
                     </div>
                 </div>
-
+                <br />
             </div>
-        </div>
-        <div class="decoration"></div>
+        </fieldset>
     </div>
+    <script src="scripts/paginas/historico.js"></script>
 </body>
 </html>
 
