--- a/www/perfil.html
+++ b/www/perfil.html
@@ -14,22 +14,45 @@
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
-            <a onclick="BuscarEstabelecimento(jQuery('#MOEDA_PROCURA').val());"><i class="fa fa-search"></i></a>
+            <a onclick="GravaUsuario();"><i class="fa fa-check"></i></a>
         </div>
-<div class="header-clear-small"></div>
+        <div class="header-clear-small"></div>
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <div >
+                    <div>
                         <fieldset>
                             <label class="input-label">Meus dados</label>
                             <input type="text" name="contactNameField" value="" class="contactField" id="NOME" placeholder="Seu nome" required readonly="readonly" />
                             <input type="email" name="contactNameField" value="" class="contactField  " id="EMAIL" placeholder="E-mail" required readonly="readonly" />
-                            <input type="email" name="contactNameField" value="" class="contactField  " id="DATA_CADASTRO" placeholder="Data de Cadastro" required readonly="readonly" />
                             <input type="password" name="contactNameField" value="" class="contactField" id="SENHA" placeholder="Senha" required />
                             <input type="password" name="contactNameField" value="" class="contactField" id="CONFIRMA_SENHA" placeholder="Confirme sua senha" required />
-                            <!--<label class="input-label">Moeda base</label>
-            <select name="" class="contactField" id="SUA_MOEDA"></select>-->
+                            <input type="tel" name="FONE" value="" class="contactField" id="FONE" placeholder="Telefone de contato" required />
+                        </fieldset>
+                        <fieldset>
+                            <label class="input-label">Meu Endereço </label>
+                            <input type="text" name="contactNameField" value="" class="cep contactField" id="CEP" onchange="CarregaEnderecoPorCep(this);"  placeholder="CEP" required />
+                            <input type="text" name="ENDERECO" value="" class="contactField" id="ENDERECO" placeholder="Logradouro" required />
+                            <input type="text" name="NUMERO" value="" class="contactField" id="NUMERO" placeholder="Número" required />
+                            <input type="text" name="COMPLEMENTO" value="" class="contactField" id="COMPLEMENTO" placeholder="Complemento" required />
+                            <input type="text" name="BAIRRO" value="" class="contactField" id="BAIRRO" placeholder="Bairro" required />
+                            <input type="text" name="CIDADE" value="" class="contactField" id="CIDADE" placeholder="Cidade" required />
+                            <input type="text" name="UF" value="" class="contactField" id="UF" placeholder="UF" required />
+                            
+                        </fieldset>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="content">
+            <div class="container no-bottom">
+                <div class="no-bottom">
+                    <div>
+                        <fieldset>
+                            <label class="input-label">Documentos</label>
+                            <input type="text" name="CPF" value="" class="cpf contactField" id="CPF" placeholder="CPF" required />
+                            <input type="text" name="RG" value="" class="contactField" id="RG" placeholder="RG" required />
+                            <input type="text" name="DATA_NASCIMENTO" value="" class="data contactField" id="DATA_NASCIMENTO" placeholder="Data de nascimento" required />
                         </fieldset>
                     </div>
                 </div>
@@ -37,8 +60,15 @@
         </div>
     </div>
     <script src="scripts/paginas/perfil.js"></script>
-</body>
+    <script>
 
+        jQuery('#DATA_NASCIMENTO').inputmask("99/99/9999");
+        jQuery('#CPF').inputmask("999.999.999-99");
+        jQuery('#CEP').inputmask("99999-999");
+        jQuery('#FONE').inputmask("(999) 99999-9999");
+   //     jQuery('.tel').inputmask("(999) 9999-9999");
+    </script>
+</body>
 </html>
 
 
