--- a/www/pg_contato.html
+++ b/www/pg_contato.html
@@ -18,7 +18,7 @@
     <div id="DIVINFO">
 
     </div>
-    <div id="DIVBUSCACOTACAO" style="display:none;">
+    <!--<div id="DIVBUSCACOTACAO" style="display:none;">
         <div class="contact-text">Moeda:</div>
         <select name="" class="contact-text" id="MOEDA" onchange="BuscaCotacaoEstabelecimento();"></select>
         <span>
@@ -46,7 +46,7 @@
     <div id="DIVMSG" style="display:none;">
         <br />
         <div class="contact-text" >Estabelecimento sem cotação disponível</div>
-    </div>
+    </div>-->
 
     <script src="scripts/jquery-2.1.4.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
@@ -57,33 +57,33 @@
 
         var DATA = '';
 
-        function PreencheSelect(ID_ESTABELECIMENTO) {
-            jQuery('#MOEDA').append('<option value="" selected>Selecione uma moeda</option>');
-            var data = jQuery.parseJSON(RetornaListaMoedaEstabelecimentoCotacao(ID_ESTABELECIMENTO, null, null));
-            if (data.length > 0) {
-                jQuery.each(data, function () {
-                    MontaSelect('MOEDA', this.SIMBOLO, this.NOME_MOEDA, this.PAIS);
-                });
-            }
+        //function PreencheSelect(ID_ESTABELECIMENTO) {
+        //    jQuery('#MOEDA').append('<option value="" selected>Selecione uma moeda</option>');
+        //    var data = jQuery.parseJSON(RetornaListaMoedaEstabelecimentoCotacao(ID_ESTABELECIMENTO, null, null));
+        //    if (data.length > 0) {
+        //        jQuery.each(data, function () {
+        //            MontaSelect('MOEDA', this.SIMBOLO, this.NOME_MOEDA, this.PAIS);
+        //        });
+        //    }
 
-            return data.length;
-        }
+        //    return data.length;
+        //}
 
-        function MontaSelect(OBJETO, SIMBOLO, NOME_MOEDA, PAIS) {
-            jQuery('#' + OBJETO + '').append('<option value=' + SIMBOLO + '>' + NOME_MOEDA + '</option>');
-        }
+        //function MontaSelect(OBJETO, SIMBOLO, NOME_MOEDA, PAIS) {
+        //    jQuery('#' + OBJETO + '').append('<option value=' + SIMBOLO + '>' + NOME_MOEDA + '</option>');
+        //}
 
-        function BuscaCotacaoEstabelecimento() {
+        //function BuscaCotacaoEstabelecimento() {
 
-            var ID_ESTABELECIMENTO = DATA.ID_ESTABELECIMENTO;
-            var SIMBOLO = jQuery('#MOEDA').val();
-            var data = jQuery.parseJSON(RetornaCotacaoEstabelecimentoPorMoeda(ID_ESTABELECIMENTO, SIMBOLO, null, null));
-            CarregaUltimaCotacao(data);
-        }
+        //    var ID_ESTABELECIMENTO = DATA.ID_ESTABELECIMENTO;
+        //    var SIMBOLO = jQuery('#MOEDA').val();
+        //    var data = jQuery.parseJSON(RetornaCotacaoEstabelecimentoPorMoeda(ID_ESTABELECIMENTO, SIMBOLO, null, null));
+        //    CarregaUltimaCotacao(data);
+        //}
 
-        function CarregaCotacaoEstabelecimento(ID_ESTABELECIMENTO, MOEDA) {
+        //function CarregaCotacaoEstabelecimento(ID_ESTABELECIMENTO, MOEDA) {
 
-        }
+        //}
 
         function RetornaEstabelecimento(ID_ESTABELECIMENTO) {
             var data = jQuery.parseJSON(RetornaEstabelecimentoPorId(ID_ESTABELECIMENTO, null, null));
@@ -95,48 +95,39 @@
         }
 
         function CarregaUltimaCotacao(data) {
-            var VALOR_VENDA = calculoVenda(data[0].TAXA_VENDA, data[0].VALOR_COTACAO).toFixed(2);
-            var VALOR_COMPRA = calculoCompra(data[0].TAXA_COMPRA, data[0].VALOR_COTACAO_COMPRA).toFixed(2);
+            var VALOR_VENDA = calculoVenda(data[0].TAXA_VENDA, data[0].VALOR_COTACAO, data[0].TIPO_COTACAO).toFixed(2);
+            var VALOR_COMPRA = calculoCompra(data[0].TAXA_COMPRA, data[0].VALOR_COTACAO_COMPRA, data[0].TIPO_COTACAO).toFixed(2);
 
             jQuery('#VALOR_COMPRA').text('R$ ' + VALOR_COMPRA);
             jQuery('#VALOR_VENDA').text('R$ ' + VALOR_VENDA);
         }
 
-        function getUrlVars() {
-            var vars = [], hash;
-            var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
-            for (var i = 0; i < hashes.length; i++) {
-                hash = hashes[i].split('=');
-                vars.push(hash[0]);
-                vars[hash[0]] = hash[1];
-            }
-            return vars;
-        }
+
 
         jQuery(document).ready(function () {
             DATA = getUrlVars();
-            if (!DATA.hasOwnProperty('SIMBOLO')) {
+            //if (!DATA.hasOwnProperty('SIMBOLO')) {
 
                 RetornaEstabelecimento(DATA.ID_ESTABELECIMENTO);
 
-                var count = PreencheSelect(DATA.ID_ESTABELECIMENTO);
-                if (count > 0) {
-                    jQuery('#DIVBUSCACOTACAO').css('display', 'block');
-                }
-                else {
-                    jQuery('#DIVMSG').css('display', 'block');
-                }
-            }
-            else {
-                RetornaEstabelecimento(DATA.ID_ESTABELECIMENTO);
-                var data = jQuery.parseJSON(RetornaCotacaoEstabelecimentoPorMoeda(DATA.ID_ESTABELECIMENTO, DATA.SIMBOLO, null, ERROCONEXAO));
-                if (data.length > 0) {
-                    jQuery.each(data, function () {
-                        jQuery('#DIVCOTACAO').html(CarregaDivCotacao(this));
-                    });
-                }
-                jQuery('#DIVCOTACAO').css('display', 'block');
-            }
+                //var count = PreencheSelect(DATA.ID_ESTABELECIMENTO);
+                //if (count > 0) {
+                //    jQuery('#DIVBUSCACOTACAO').css('display', 'block');
+                //}
+                //else {
+                //    jQuery('#DIVMSG').css('display', 'block');
+                //}
+            //}
+            //else {
+            //    RetornaEstabelecimento(DATA.ID_ESTABELECIMENTO);
+            //    var data = jQuery.parseJSON(RetornaCotacaoEstabelecimentoPorMoeda(DATA.ID_ESTABELECIMENTO, DATA.SIMBOLO, null, ERROCONEXAO));
+            //    if (data.length > 0) {
+            //        jQuery.each(data, function () {
+            //            jQuery('#DIVCOTACAO').html(CarregaDivCotacao(this));
+            //        });
+            //    }
+            //    jQuery('#DIVCOTACAO').css('display', 'block');
+            //}
         });
 
         function MontaMapa(data) {
@@ -151,19 +142,19 @@
             jQuery('#DIVINFO').html(html);
         }
 
-        function CarregaDivInfo() {
+        //function CarregaDivInfo() {
 
-        }
-        function CarregaDivCotacao(data) {
+        //}
+        //function CarregaDivCotacao(data) {
 
-            var html = "<a class='contact-text' href='#'>Moeda :" + data.NOME_MOEDA + "</a>" +
-                        "<a class='contact-text' href='#'>Compra :R$ "+calculoCompra(data.TAXA_COMPRA, data.VALOR_COTACAO_COMPRA).toFixed(2)+"</a>" +
-                        "<a class='contact-text' href='#'>Venda :R$ "+calculoVenda(data.TAXA_VENDA, data.VALOR_COTACAO).toFixed(2)+"</a>";
-            return html;
-        }
-        function CarregaDivBuscaCotacao() {
+        //    var html = "<a class='contact-text' href='#'>Moeda :" + data.NOME_MOEDA + "</a>" +
+        //                "<a class='contact-text' href='#'>Compra :R$ "+calculoCompra(data.TAXA_COMPRA, data.VALOR_COTACAO_COMPRA).toFixed(2)+"</a>" +
+        //                "<a class='contact-text' href='#'>Venda :R$ "+calculoVenda(data.TAXA_VENDA, data.VALOR_COTACAO).toFixed(2)+"</a>";
+        //    return html;
+        //}
+        //function CarregaDivBuscaCotacao() {
 
-        }
+        //}
     </script>
 
 </body>
