--- a/www/operacao.html
+++ b/www/operacao.html
@@ -22,7 +22,7 @@
                         <div>
                             <fieldset>
                                 <label class="input-label">CEP</label>
-                                <input type="number" name="contactNameField" value="" class="contactField" id="CEP" placeholder="CEP" required />
+                                <input type="text" name="contactNameField" value="" class="contactField" id="CEP" placeholder="CEP" required />
                                 <label class="input-label">Endereço</label>
                                 <input type="text" name="ENDERECO" value="" class="contactField" id="ENDERECO" placeholder="Logradouro" required />
                                 <label class="input-label">Número</label>
