--- a/www/operacao.html
+++ b/www/operacao.html
@@ -8,7 +8,7 @@
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
-            <a class="open-nav" href="#"><i class="fa fa-arrow-left"></i></a>
+            <a class="" onclick="VoltarEtapa()"><i class="fa fa-arrow-left"></i></a>
         </div>
         <div class="header-clear-small"></div>
         <div id="DIVOPERACAO">
@@ -35,7 +35,7 @@
                                 <input type="text" name="CIDADE" value="" class="contactField" id="CIDADE" placeholder="Cidade" required />
                                 <label class="input-label">UF</label>
                                 <input type="text" name="UF" value="" class="contactField" id="UF" placeholder="UF" required />
-                                <div class="static-notification-green" id="38_XCD" style="border-radius: 10px;" onclick="Confirmar('2')">
+                                <div class="static-notification-green" id="38_XCD" style="border-radius: 10px;" onclick="Confirmar(2)">
                                     <p class="center-text uppercase" style="color: white; font-size: 15px;">confirmar</p>
                                 </div>
                             </fieldset>
@@ -58,7 +58,7 @@
                                 <label class="input-label">RG</label>
                                 <input type="text" name="RG" value="" class="contactField" id="RG" placeholder="RG" required />
 
-                                <div class="static-notification-green" id="38_XCD" style="border-radius: 10px;" onclick="Confirmar('3')">
+                                <div class="static-notification-green" id="38_XCD" style="border-radius: 10px;" onclick="Confirmar(3)">
                                     <p class="center-text uppercase" style="color: white; font-size: 15px;">confirmar</p>
                                 </div>
                             </fieldset>
