--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -8,7 +8,7 @@
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
-            <a class="open-nav" href="#"><i class="fa fa-arrow-left"></i></a>
+            <a  href="#"><i></i></a>
         </div>
         <div class="header-clear-small"></div>
         <div class="content">
