--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,7 @@
             <!--<a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>-->
             <a onclick="Registrar();"><i class="fa  fa-pencil"></i></a>
             <a class="header-logo">eXCHANGE</a>
-            <a onclick="BuscaLogin();"><i class="fa fa-sign-in"></i></a>
+            <a href="#"><i></i></a>
         </div>
         <div class="header-clear"></div>
         <div class="header-clear"></div>
@@ -58,6 +58,9 @@
                         <input type="password" name="contactNameField" value="" class="contactField" id="SENHA" placeholder="Senha" required  />
                         <!--</fieldset>-->
                     </div>
+                         <div class='static-notification-green' style='border-radius: 10px;' onclick='BuscaLogin();'>
+                                 <p class='center-text uppercase' style='color: white; font-size: 15px;'>Entrar</p>      
+                    </div>    
                 </div>
             </div>
         </div>
