MODIFICAÇÕES - IGUAL AO PPT

--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
     <div>
         <div class="header">
             <!--<a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>-->
-            <a onclick="Registrar();"><i class="fa  fa-pencil"></i></a>
+            <a ><i></i></a>
             <a class="header-logo">eXCHANGE</a>
             <a href="#"><i></i></a>
         </div>
@@ -58,9 +58,13 @@
                         <input type="password" name="contactNameField" value="" class="contactField" id="SENHA" placeholder="Senha" required  />
                         <!--</fieldset>-->
                     </div>
-                         <div class='static-notification-green' style='border-radius: 10px;' onclick='BuscaLogin();'>
-                                 <p class='center-text uppercase' style='color: white; font-size: 15px;'>Entrar</p>      
-                    </div>    
+                    <div class="static-notification-exchange-login" style="border-radius: 10px;" onclick="BuscaLogin();">
+                        <p class="center-text" style="color: #0489B1; font-size: 15px;">Entrar</p>
+                    </div>
+                    <div class="static-notification-exchange-login" style="border-radius: 10px;" onclick="Registrar();">
+                        <p class=" center-text" style="color: #0489B1; font-size: 15px;">
+                        Cadastrar</p>
+                    </div>
                 </div>
             </div>
         </div>
