--- a/www/operacao.html
+++ b/www/operacao.html
@@ -21,22 +21,24 @@
                     <div class="no-bottom">
                         <div>
                             <fieldset>
-                                <label class="input-label">CEP</label>
+                                <label class="label-exchange">CEP</label>
                                 <input type="text" name="contactNameField" value="" class="contactField" id="CEP" placeholder="CEP" required />
-                                <label class="input-label">Endereço</label>
+                                <label class="label-exchange">Endereço</label>
                                 <input type="text" name="ENDERECO" value="" class="contactField" id="ENDERECO" placeholder="Logradouro" required />
-                                <label class="input-label">Número</label>
+                                <label class="label-exchange">Número</label>
                                 <input type="number" name="NUMERO" value="" class="contactField" id="NUMERO" placeholder="Número" required />
-                                <label class="input-label">Complemento</label>
+                                <label class="label-exchange">Complemento</label>
                                 <input type="text" name="COMPLEMENTO" value="" class="contactField" id="COMPLEMENTO" placeholder="Complemento" required />
-                                <label class="input-label">Bairro</label>
+                                <label class="label-exchange">Bairro</label>
                                 <input type="text" name="BAIRRO" value="" class="contactField" id="BAIRRO" placeholder="Bairro" required />
-                                <label class="input-label">Cidade</label>
+                                <label class="label-exchange">Cidade</label>
                                 <input type="text" name="CIDADE" value="" class="contactField" id="CIDADE" placeholder="Cidade" required />
-                                <label class="input-label">UF</label>
+                                <label class="label-exchange">UF</label>
                                 <input type="text" name="UF" value="" class="contactField" id="UF" placeholder="UF" required />
-                                <div class="static-notification-green" id="38_XCD" style="border-radius: 10px;" onclick="Confirmar(2)">
-                                    <p class="center-text uppercase" style="color: white; font-size: 15px;">confirmar</p>
+                                <div class="static-notification-exchange-login" onclick="Confirmar(2)">
+                                    <p class="center-text">
+                                        confirmar
+                                    </p>
                                 </div>
                             </fieldset>
                         </div>
@@ -49,17 +51,19 @@
                     <div class="no-bottom">
                         <div>
                             <fieldset>
-                                <label class="input-label">Nome</label>
+                                <label class="label-exchange">Nome</label>
                                 <input type="text" name="NOME" value="" class="contactField" id="NOME" placeholder="Nome" required />
-                                <label class="input-label">Data de Nascimento</label>
+                                <label class="label-exchange">Data de Nascimento</label>
                                 <input type="text" name="DATA_NASCIMENTO" value="" class="contactField" id="DATA_NASCIMENTO" placeholder="Data de nascimento" required />
-                                <label class="input-label">CPF</label>
+                                <label class="label-exchange">CPF</label>
                                 <input type="text" name="CPF" value="" class="contactField" id="CPF" placeholder="CPF" required />
-                                <label class="input-label">RG</label>
+                                <label class="label-exchange">RG</label>
                                 <input type="text" name="RG" value="" class="contactField" id="RG" placeholder="RG" required />
 
-                                <div class="static-notification-green" id="38_XCD" style="border-radius: 10px;" onclick="Confirmar(3)">
-                                    <p class="center-text uppercase" style="color: white; font-size: 15px;">confirmar</p>
+                                <div class="static-notification-exchange-login"  onclick="Confirmar(3)">
+                                    <p class="center-text">
+                                        Confirmar
+                                    </p>
                                 </div>
                             </fieldset>
                         </div>
