--- a/www/registro.html
+++ b/www/registro.html
@@ -52,9 +52,11 @@
                             <input type="email" name="contactNameField" value="" class="contactField  " id="EMAIL" placeholder="E-mail" required />
                             <input type="password" name="contactNameField" value="" class="contactField" id="SENHA" placeholder="Senha" required />
                             <input type="password" name="contactNameField" value="" class="contactField" id="CONFIRMA_SENHA" placeholder="Confirme sua senha" required />
-                            <div class='static-notification-green' style='border-radius: 10px;' onclick='GravaUsuario();'>
-                                <p class='center-text uppercase' style='color: white; font-size: 15px;'>Cadastrar</p>
-                            </div>    
+                            <div class="static-notification-exchange-login" style="border-radius: 10px;" onclick="GravaUsuario();">
+                                <p class="center-text" style="color: #0489B1; font-size: 15px;">
+                                    Cadastrar
+                                </p>
+                            </div>
                         </fieldset>
                     </div>
                 </div>
