--- a/www/pg_contato.html
+++ b/www/pg_contato.html
@@ -135,9 +135,10 @@
             var html = "<strong class='contact-text'>" + data.NOME + "</strong><br>" +
                "<a class='contact-text' href='#'>Tel :" + data.FONE + "</a>" +
                //"<a class='contact-mail' href='#'>Email: " + data.EMAIL + "</a>" +
-               "<a class='contact-text' href='#'>Endereço :" + data.ENDERECO + "," + data.NUMERO + "</a>" +
-               "<a class='contact-text' href='#'>" + data.COMPLEMENTO + " - " + data.BAIRRO + "</a>" +
-               "<a class='contact-text' href='#'>" + data.CIDADE + "," + data.UF + "</a>";
+               "<a class='contact-text' href='#'>Endereço :" + data.ENDERECO + " , " + data.NUMERO + "</a>" +
+               "<a class='contact-text' href='#'>Comp. :" + data.COMPLEMENTO + "</a>" +
+               "<a class='contact-text' href='#'>Bairro :" + data.BAIRRO + "</a>" +
+               "<a class='contact-text' href='#'>Cidade :" + data.CIDADE + ", " + data.UF + " </a>";
 
             jQuery('#DIVINFO').html(html);
         }
