--- a/www/favoritos.html
+++ b/www/favoritos.html
@@ -2,14 +2,18 @@
 <html>
 <head>
     <title></title>
-
+    <script src="scripts/jquery-2.1.4.js"></script>
+    <script type="text/javascript" src="scripts/jqueryui.js"></script>
+    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
+    <script type="text/javascript" src="scripts/custom.js"></script>
+    <script src="scripts/paginas/favoritos.js"></script>
 </head>
 <body>
     <div id="content" class="page-content">
-        <div class="header">
+            <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
-            <a class="open-nav" href="#"><i class="fa fa-arrow-left"></i></a>
+            <a  href="#"><i></i></a>
         </div>
         <div class="header-clear-small"></div>
         <div class="content">
@@ -27,11 +31,7 @@
             <br />
         </div>
     </div>
-    <!--<script src="scripts/jquery-2.1.4.js"></script>
-    <script type="text/javascript" src="scripts/jqueryui.js"></script>-->
-    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
-    <script type="text/javascript" src="scripts/custom.js"></script>
-    <script src="scripts/paginas/favoritos.js"></script>
+
 </body>
 
 </html>
